--- a/guestbook/index.html
+++ b/guestbook/index.html
@@ -315,9 +315,9 @@
   &copy; 2020 – 
   <span itemprop="copyrightYear">2021</span>
   <span class="with-love">
-    <i class="fa fa-heart"></i>
+    <i class="fas fa-blog"></i>
   </span>
-  <span class="author" itemprop="copyrightHolder">like</span>
+  <span class="author" itemprop="copyrightHolder">旧地址 <a target="_blank" rel="noopener" href="https://old.likeyl.cn/">old.likeyl.cn</a></span>
     <span class="post-meta-divider">|</span>
     <span class="post-meta-item-icon">
       <i class="fa fa-coffee"></i>
