--- a/guestbook/index.html
+++ b/guestbook/index.html
@@ -317,7 +317,7 @@
   <span class="with-love">
     <i class="fas fa-blog"></i>
   </span>
-  <span class="author" itemprop="copyrightHolder">旧地址 <a target="_blank" rel="noopener" href="https://old.likeyl.cn/">old.likeyl.cn</a></span>
+  <span class="author" itemprop="copyrightHolder">旧地址： <a target="_blank" rel="noopener" href="https://old.likeyl.cn/">old.likeyl.cn</a></span>
     <span class="post-meta-divider">|</span>
     <span class="post-meta-item-icon">
       <i class="fa fa-coffee"></i>
