--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-inner container">
+      <div class="footer-inner">
         
 
         
