--- a/guestbook/index.html
+++ b/guestbook/index.html
@@ -347,7 +347,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-inner container">
+      <div class="footer-inner">
         
 
         
